Upgraded project to Java 11